add in the HTML
Co-authored-by: aracelivaldovinos <aracelivaldovinos@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <title>Word Play!</title>
 </head>
 <body>
-  
+  <form>
+    <label>Enter a sentence!</label>
+    <textarea></textarea>
+    <button class="btn btn-primary">Submit</button>
+  </form>
 </body>
 </html>
