--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     <textarea></textarea>
     <button class="btn btn-primary">Submit</button>
   </form>
+
+  <div class="output"></div>
 </body>
 </html>
